add HE search to search page

--- a/_assets/css/encyclopedia.scss
+++ b/_assets/css/encyclopedia.scss
@@ -1,1 +1,1 @@
-@import "custom.scss", "../bootstrap3_player/bootstrap3_player.scss";
+@import "custom.scss", "../bootstrap3_player/bootstrap3_player.scss", "search.scss";
