--- a/_assets/includes/aside.htm
+++ b/_assets/includes/aside.htm
@@ -1,1 +1,88 @@
-<!-- #bbpragma doctype="html5" root_element="aside" encoding="utf-8" --><h4 style="color: maroon"><i>Encyclopedia</i> ToC</h4><details style="color: gray"><summary>Category headings</summary><ul><li><a href="/category/absurdities/index.html">Absurdities &amp; Lies</a> (24)</li><li><a href="/category/concept/index.html">Concepts &amp; Terms</a> (28)</li><li><a href="/category/document/index.html">Documents</a> (17)</li><li><a href="/category/event/index.html">Events</a> (20)</li><li><a href="/category/historical-person/index.html">Historical persons</a> (63)<ul><li><a href="/category/historical-person/legal-professional/index.html">Legal Professional</a> (9)</li><li><a href="/category/historical-person/politician/index.html">Politician/Official</a> (31)</li><li><a href="/category/historical-person/propagandist/index.html">Propagandist/Chronicler</a> (14)</li></ul></li><li><a href="/category/instruments/index.html">Instruments</a> (69)<ul><li><a href="/category/instruments/camp/index.html">Camps</a> (42)<ul><li><a href="/category/instruments/camp/mixed-purpose-camp/index.html">Mixed-Purpose Camps</a> (9)</li><li><a href="/category/instruments/camp/other-camp/index.html">Other Camps</a> (9)</li><li><a href="/category/instruments/camp/phantom-camp/index.html">Phantom Extermination Camps</a> (7)</li><li><a href="/category/instruments/camp/pure-extermination-camp/index.html">Pure Extermination Camps</a> (6)</li></ul></li><li><a href="/category/instruments/einsatzgruppen/index.html">Einsatzgruppen</a> (5)</li><li><a href="/category/instruments/ghetto/index.html">Ghetto</a> (3)</li><li><a href="/category/instruments/tool/index.html">Tool</a> (18)</li></ul></li><li><a href="/category/legal/index.html">Legal</a> (35)<ul><li><a href="/category/legal/company/index.html">Company</a> (8)</li><li><a href="/category/legal/institution/index.html">Institution</a> (7)</li><li><a href="/category/legal/law/index.html">Law</a> (3)</li><li><a href="/category/legal/trial/index.html">Trial</a> (17)</li></ul></li><li><a href="/category/location/index.html">Locations</a> (72)<ul><li><a href="/category/location/camps/index.html">Camps</a> (25)</li><li><a href="/category/location/country/index.html">Country</a> (20)</li><li><a href="/category/location/ghettos/index.html">Ghettos</a> (2)</li><li><a href="/category/location/museum-memorial/index.html">Museum/Memorial</a> (4)</li><li><a href="/category/location/other-crime-scene/index.html">Other Crime Scene</a> (13)</li><li><a href="/category/location/other-locations/index.html">other locations</a> (7)</li></ul></li><li><a href="/category/manipulation/index.html">Manipulation</a> (4)</li><li><a href="/category/object/index.html">Objects</a> (8)</li><li><a href="/category/plan-order/index.html">Plans &amp; Orders</a> (21)<ul><li><a href="/category/plan-order/wartime-leader/index.html">Wartime Leader</a> (13)</li></ul></li><li><a href="/category/result/index.html">Results</a> (3)</li><li><a href="/category/technology/index.html">Technologies</a> (18)</li><li><a href="/category/toxin-chemical/index.html">Toxins &amp; Chemicals</a> (8)</li><li><a href="/category/victim-groups/index.html">Victim Groups (non-Jewish)</a> (3)</li><li><a href="/category/witness/index.html">Witnesses</a> (294)<ul><li><a href="/category/witness/bystander/index.html">Bystanders</a> (3)</li><li><a href="/category/witness/expert/index.html">Experts</a> (6)</li><li><a href="/category/witness/false-witness/index.html">False Witnesses</a> (13)</li><li><a href="/category/witness/perpetrator/index.html">Perpetrators</a> (56)</li><li><a href="/category/witness/victim/index.html">Victims</a> (218)</li></ul></li></ul></details><details style="color: gray"><summary>General pages</summary><ul><li><a href="/about-us/index.html">About us</a></li><li><a href="/bibliography/index.html">Bibliography</a></li><li><a href="/change-log/index.html">Change log</a></li><li><a href="/contact-us/index.html">Contact us</a></li><li><a href="/download-our-encyclopedia-free-of-charge/index.html">Free download</a></li><li><a href="/introduction/index.html">Introduction</a></li><li><a href="/list-of-entries/index.html">List of entries</a></li><li><a href="/how-to-use-this-site/index.html">Post listing</a></li><li><a href="/preface/index.html">Preface</a></li></ul></details><br>
+<!-- #bbpragma doctype="html5" root_element="aside" encoding="utf-8" -->
+<h4 style="color: maroon">
+	<i>Encyclopedia</i> ToC
+</h4>
+<details style="color: gray">
+	<summary>Category headings</summary>
+	<ul>
+		<li><a href="/category/absurdities/index.html">Absurdities &amp; Lies</a> (24)</li>
+		<li><a href="/category/concept/index.html">Concepts &amp; Terms</a> (28)</li>
+		<li><a href="/category/document/index.html">Documents</a> (17)</li>
+		<li><a href="/category/event/index.html">Events</a> (20)</li>
+		<li><a href="/category/historical-person/index.html">Historical persons</a> (63)
+		<ul>
+			<li><a href="/category/historical-person/legal-professional/index.html">Legal Professional</a> (9)</li>
+			<li><a href="/category/historical-person/politician/index.html">Politician/Official</a> (31)</li>
+			<li><a href="/category/historical-person/propagandist/index.html">Propagandist/Chronicler</a> (14)</li>
+		</ul>
+		</li>
+		<li><a href="/category/instruments/index.html">Instruments</a> (69)
+		<ul>
+			<li><a href="/category/instruments/camp/index.html">Camps</a> (42)
+			<ul>
+				<li><a href="/category/instruments/camp/mixed-purpose-camp/index.html">Mixed-Purpose Camps</a> (9)</li>
+				<li><a href="/category/instruments/camp/other-camp/index.html">Other Camps</a> (9)</li>
+				<li><a href="/category/instruments/camp/phantom-camp/index.html">Phantom Extermination Camps</a> (7)</li>
+				<li><a href="/category/instruments/camp/pure-extermination-camp/index.html">Pure Extermination Camps</a> (6)</li>
+			</ul>
+			</li>
+			<li><a href="/category/instruments/einsatzgruppen/index.html">Einsatzgruppen</a> (5)</li>
+			<li><a href="/category/instruments/ghetto/index.html">Ghetto</a> (3)</li>
+			<li><a href="/category/instruments/tool/index.html">Tool</a> (18)</li>
+		</ul>
+		</li>
+		<li><a href="/category/legal/index.html">Legal</a> (35)
+		<ul>
+			<li><a href="/category/legal/company/index.html">Company</a> (8)</li>
+			<li><a href="/category/legal/institution/index.html">Institution</a> (7)</li>
+			<li><a href="/category/legal/law/index.html">Law</a> (3)</li>
+			<li><a href="/category/legal/trial/index.html">Trial</a> (17)</li>
+		</ul>
+		</li>
+		<li><a href="/category/location/index.html">Locations</a> (72)
+		<ul>
+			<li><a href="/category/location/camps/index.html">Camps</a> (25)</li>
+			<li><a href="/category/location/country/index.html">Country</a> (20)</li>
+			<li><a href="/category/location/ghettos/index.html">Ghettos</a> (2)</li>
+			<li><a href="/category/location/museum-memorial/index.html">Museum/Memorial</a> (4)</li>
+			<li><a href="/category/location/other-crime-scene/index.html">Other Crime Scene</a> (13)</li>
+			<li><a href="/category/location/other-locations/index.html">other locations</a> (7)</li>
+		</ul>
+		</li>
+		<li><a href="/category/manipulation/index.html">Manipulation</a> (4)</li>
+		<li><a href="/category/object/index.html">Objects</a> (8)</li>
+		<li><a href="/category/plan-order/index.html">Plans &amp; Orders</a> (21)
+		<ul>
+			<li><a href="/category/plan-order/wartime-leader/index.html">Wartime Leader</a> (13)</li>
+		</ul>
+		</li>
+		<li><a href="/category/result/index.html">Results</a> (3)</li>
+		<li><a href="/category/technology/index.html">Technologies</a> (18)</li>
+		<li><a href="/category/toxin-chemical/index.html">Toxins &amp; Chemicals</a> (8)</li>
+		<li><a href="/category/victim-groups/index.html">Victim Groups (non-Jewish)</a> (3)</li>
+		<li><a href="/category/witness/index.html">Witnesses</a> (294)
+		<ul>
+			<li><a href="/category/witness/bystander/index.html">Bystanders</a> (3)</li>
+			<li><a href="/category/witness/expert/index.html">Experts</a> (6)</li>
+			<li><a href="/category/witness/false-witness/index.html">False Witnesses</a> (13)</li>
+			<li><a href="/category/witness/perpetrator/index.html">Perpetrators</a> (56)</li>
+			<li><a href="/category/witness/victim/index.html">Victims</a> (218)</li>
+		</ul>
+		</li>
+	</ul>
+</details>
+<details style="color: gray">
+	<summary>General pages</summary>
+	<ul>
+		<li><a href="/index.html">Home</a></li>
+		<li><a href="/about-us/index.html">About us</a></li>
+		<li><a href="/bibliography/index.html">Bibliography</a></li>
+		<li><a href="/change-log/index.html">Change log</a></li>
+		<li><a href="/contact-us/index.html">Contact us</a></li>
+		<li><a href="/download-our-encyclopedia-free-of-charge/index.html">Free download</a></li>
+		<li><a href="/introduction/index.html">Introduction</a></li>
+		<li><a href="/list-of-entries/index.html">List of entries</a></li>
+		<li><a href="/how-to-use-this-site/index.html">Post listing</a></li>
+	</ul>
+</details>
+<br>
