--- a/_assets/includes/aside.htm
+++ b/_assets/includes/aside.htm
@@ -11,24 +11,11 @@
 		<li><a href="/categories/events/index.html">Events</a> (20)</li>
 		<li><a href="/categories/instruments/index.html">Instruments</a> (69)</li>
 		<li><a href="/categories/legal.html">Legal</a> (35)</li>
-		<li><a href="/categories/locations/index.html">Locations</a> (72)
-		<ul>
-			<li><a href="/categories/locations/camps/index.html">Camps</a> (25)</li>
-			<li><a href="/categories/locations/country/index.html">Country</a> (20)</li>
-			<li><a href="/categories/locations/ghettos/index.html">Ghettos</a> (2)</li>
-			<li><a href="/categories/locations/museum-memorial/index.html">Museum/Memorial</a> (4)</li>
-			<li><a href="/categories/locations/other-crime-scene/index.html">Other Crime Scene</a> (13)</li>
-			<li><a href="/categories/locations/other-locations/index.html">other locations</a> (7)</li>
-		</ul>
-		</li>
-		<li><a href="/categories/manipulation/index.html">Manipulation</a> (4)</li>
-		<li><a href="/categories/objects/index.html">Objects</a> (8)</li>
+		<li><a href="/categories/locations/index.html">Locations</a> (72)</li>
+		<li><a href="/categories/manipulation.html">Manipulation</a> (4)</li>
+		<li><a href="/categories/objects.html">Objects</a> (8)</li>
 		<li><a href="/categories/persons.html">Persons</a> (63)</li>
-		<li><a href="/categories/plans-orders/index.html">Plans &amp; Orders</a> (21)
-		<ul>
-			<li><a href="/categories/plans-orders/wartime-leader/index.html">Wartime Leader</a> (13)</li>
-		</ul>
-		</li>
+		<li><a href="/categories/plans-orders.html">Plans &amp; Orders</a> (21)</li>
 		<li><a href="/categories/results/index.html">Results</a> (3)</li>
 		<li><a href="/categories/technologies/index.html">Technologies</a> (18)</li>
 		<li><a href="/categories/toxins-chemicals/index.html">Toxins &amp; Chemicals</a> (8)</li>
