--- a/_assets/includes/aside.htm
+++ b/_assets/includes/aside.htm
@@ -18,17 +18,9 @@
 		<li><a href="/categories/plans-orders.html">Plans &amp; Orders</a> (21)</li>
 		<li><a href="/categories/results/index.html">Results</a> (3)</li>
 		<li><a href="/categories/technologies/index.html">Technologies</a> (18)</li>
-		<li><a href="/categories/toxins-chemicals/index.html">Toxins &amp; Chemicals</a> (8)</li>
-		<li><a href="/categories/victim-groups/index.html">Victim Groups (non-Jewish)</a> (3)</li>
-		<li><a href="/categories/witnesses/index.html">Witnesses</a> (294)
-		<ul>
-			<li><a href="/categories/witnesses/bystander/index.html">Bystanders</a> (3)</li>
-			<li><a href="/categories/witnesses/expert/index.html">Experts</a> (6)</li>
-			<li><a href="/categories/witnesses/false-witness/index.html">False Witnesses</a> (13)</li>
-			<li><a href="/categories/witnesses/perpetrator/index.html">Perpetrators</a> (56)</li>
-			<li><a href="/categories/witnesses/victim/index.html">Victims</a> (218)</li>
-		</ul>
-		</li>
+		<li><a href="/categories/toxins-chemicals.html">Toxins &amp; Chemicals</a> (8)</li>
+		<li><a href="/categories/victim-groups.html">Victim Groups (non-Jewish)</a> (3)</li>
+		<li><a href="/categories/witnesses/index.html">Witnesses</a> (294)</li>
 	</ul>
 </details>
 <details style="color: gray">
