--- a/_assets/includes/aside.htm
+++ b/_assets/includes/aside.htm
@@ -5,19 +5,19 @@
 <details style="color: gray">
 	<summary>Category headings</summary>
 	<ul>
-		<li><a href="/categories/absurdities/index.html">Absurdities &amp; Lies</a> (24)</li>
-		<li><a href="/categories/concepts/index.html">Concepts &amp; Terms</a> (28)</li>
-		<li><a href="/categories/documents/index.html">Documents</a> (17)</li>
-		<li><a href="/categories/events/index.html">Events</a> (20)</li>
-		<li><a href="/categories/instruments/index.html">Instruments</a> (69)</li>
+		<li><a href="/categories/absurdities.html">Absurdities &amp; Lies</a> (24)</li>
+		<li><a href="/categories/concepts.html">Concepts &amp; Terms</a> (28)</li>
+		<li><a href="/categories/documents.html">Documents</a> (17)</li>
+		<li><a href="/categories/events.html">Events</a> (20)</li>
+		<li><a href="/categories/instruments.html">Instruments</a> (69)</li>
 		<li><a href="/categories/legal.html">Legal</a> (35)</li>
-		<li><a href="/categories/locations/index.html">Locations</a> (72)</li>
+		<li><a href="/categories/locations.html">Locations</a> (72)</li>
 		<li><a href="/categories/manipulation.html">Manipulation</a> (4)</li>
 		<li><a href="/categories/objects.html">Objects</a> (8)</li>
 		<li><a href="/categories/persons.html">Persons</a> (63)</li>
 		<li><a href="/categories/plans-orders.html">Plans &amp; Orders</a> (21)</li>
-		<li><a href="/categories/results/index.html">Results</a> (3)</li>
-		<li><a href="/categories/technologies/index.html">Technologies</a> (18)</li>
+		<li><a href="/categories/results.html">Results</a> (3)</li>
+		<li><a href="/categories/technologies.html">Technologies</a> (18)</li>
 		<li><a href="/categories/toxins-chemicals.html">Toxins &amp; Chemicals</a> (8)</li>
 		<li><a href="/categories/victim-groups.html">Victim Groups (non-Jewish)</a> (3)</li>
 		<li><a href="/categories/witnesses/index.html">Witnesses</a> (294)</li>
