--- a/_assets/includes/aside.htm
+++ b/_assets/includes/aside.htm
@@ -20,7 +20,7 @@
 		<li><a href="/categories/technologies.html">Technologies</a> (18)</li>
 		<li><a href="/categories/toxins-chemicals.html">Toxins &amp; Chemicals</a> (8)</li>
 		<li><a href="/categories/victim-groups.html">Victim Groups (non-Jewish)</a> (3)</li>
-		<li><a href="/categories/witnesses/index.html">Witnesses</a> (294)</li>
+		<li><a href="/categories/witnesses.html">Witnesses</a> (294)</li>
 	</ul>
 </details>
 <details style="color: gray">
