--- a/_assets/css/custom.scss
+++ b/_assets/css/custom.scss
@@ -1,30 +1,54 @@
 @charset "UTF-8";
 
-body
+blockquote { font-size: 16px; }
+
+blockquote p
 {
-	color: black;
-	font-family: Georgia, serif;
+	margin-bottom: 1em;
+	padding-right: 2em;
 }
 
-h1, h2, h3, h4, h5, h6, .breadcrumb, .lead, .navigation, .panel-heading { font-family: 'Trebuchet MS', sans-serif; }
-h4 { font-weight: bold; }
-caption { text-align: center; }
+body
+{
+	color: #111;
+	font-family: "Iowan Old Style", "Palatino Linotype", "URW Palladio L", P052, serif;
+}
+
+caption
+{
+	font-family: Optima, Candara, "Noto Sans", source-sans-pro, sans-serif;
+	text-align: center;
+}
+
+dt, dd { font-size: 16px; }
+dl { margin-left: 50%; }
+h1, h2, h3, .breadcrumb, .lead, .navigation, .panel-heading { font-family: Optima, Candara, "Noto Sans", source-sans-pro, sans-serif; }
+
+h4
+{
+	font-family: Optima, Candara, "Noto Sans", source-sans-pro, sans-serif;
+	font-weight: bold;
+}
 
 h5
 {
-	font-size: 17px;
+	font-family: Optima, Candara, "Noto Sans", source-sans-pro, sans-serif;
+	font-size: 17.5px;
 	font-weight: 700;
+	text-align: center;
 }
 
 h6
 {
-	font-size: 16px;
+	font-family: Optima, Candara, "Noto Sans", source-sans-pro, sans-serif;
+	font-size: 17px;
 	font-weight: 700;
+	text-align: center;
 }
 
 article p, article li, article dl
 {
-	font-size: 16px;
+	font-size: 17.5px;
 	line-height: 1.5;
 }
 
@@ -39,21 +63,33 @@ figure, iframe, object
 }
 
 form { padding-bottom: 1em; }
-q:before { content: "\201c"; }
-q:after { content: "\201d"; }
-q q:before { content: "\2018"; }
-q q:after { content: "\2019"; }
+q { quotes: "“" "”" "‘" "’"; }
+q::before { content: open-quote; }
+q::after { content: close-quote; }
+section { padding-top: 1em; }
 
-sub, sup, .footnote
+sub
 {
+	bottom: -0.25em;
 	font-size: smaller;
 	vertical-align: baseline;
 	position: relative;
 }
 
-sup, .footnote { bottom: 0.33em; }
-sub { bottom: -0.25em; }
-.active { font-weight: bold; }
+summary
+{
+	display: list-item;
+	cursor: pointer;
+}
+
+sup
+{
+	bottom: 0.33em;
+	font-size: smaller;
+	vertical-align: baseline;
+	position: relative;
+}
+
 .breadcrumb { margin-top: 1em; }
 .columns { column-gap: 1em; margin-bottom: 1em; }
 .embed-responsive { margin-bottom: 1em; }
